--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
  <html lang="en">
  <head>
    <meta charset="utf-8">
+   <script type="text/javascript" src="js/index.js></script>
    <title>Vores app</title>
  </head>
  <body>
 
+<button id = "Oversigt" onclick="openBrowser('https://affald.000webhostapp.com/index.html')"></button>
 
 <iframe 
 
