--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
  <head>
    <meta charset="utf-8">
    <script type="text/javascript" src="js/index.js></script>
-   <title>Vores app</title>
+   <script type="text/javascript" charset="utf-8" src="cordova-2.4.0.js"></script>
+   <title> Vores app</title>
  </head>
  <body>
 
