puttede den rigtige kode ind og slettede det andet

--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
- <html lang="en">
- <head>
-   <meta charset="utf-8">
-   <script type="text/javascript" src="js/index.js></script>
-   <script type="text/javascript" charset="utf-8" src="cordova-2.4.0.js"></script>
-   <title> Vores app</title>
- </head>
- <body>
-
-<button id = "Oversigt" onclick="openBrowser('https://affald.000webhostapp.com/index.html')"></button>
-
-<iframe 
-
-src="https://affald.000webhostapp.com/index.html" ></iframe>
- </body>
- </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Example of Opening Links in an iFrame</title>
+</head>
+<body>
+    <iframe src="/examples/html/demo-page.html" name="myFrame"></iframe>
+    <p><a href="http://affald.000webhostapp.com" target="myFrame">Tutorial Republic</a></p>
+</body>
+</html>
